infra/k8s/auth-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth-depl
  template:
    metadata:
      labels:
        app: auth-depl
    spec:
      containers:
      - name: auth-depl
        image: us.gcr.io/ticketing-dev-275320/auth
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth-depl
  ports:
  - name: auth-srv
    port: 3000
    protocol: TCP
    targetPort: 3000
