infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client-depl
  template:
    metadata:
      labels:
        app: client-depl
    spec:
      containers:
        - name: client-depl
          image: us.gcr.io/ticketing-dev-275320/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-depl
  ports:
    - name: client-srv
      port: 3000
      protocol: TCP
      targetPort: 3000
