infra/k8s/tickets-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  selector:
    matchLabels:
      app: tickets-depl
  template:
    metadata:
      labels:
        app: tickets-depl
    spec:
      containers:
        - name: tickets-depl
          image: us.gcr.io/ticketing-dev-275320/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets-depl
  ports:
    - name: tickets-srv
      port: 3000
      protocol: TCP
      targetPort: 3000
